--- a/index.html
+++ b/index.html
@@ -236,12 +236,6 @@ The model achieves stable next-day forecasts with approximately
 93% pixel-level accuracy on validation data.
 Predicted high-risk zones are visualized through an interactive web dashboard.
 </p>
-
-<p>📄 <a href="./agnirodhak_abstract.pdf" target="_blank">Project Abstract (PDF)</a></p>
-
-<img src="./agnirodhak_demo.gif"
-     alt="Forest Fire Risk Prediction"
-     style="width:100%;border-radius:12px;margin-top:20px;">
 </div>
 </section>
 
@@ -286,8 +280,11 @@ GitHub →
 <section id="contact" class="fade">
 <h2>Contact</h2>
 <p>Email: amishanitr23july@gmail.com</p>
-<p>GitHub: <a href="https://github.com/amishapatel20" target="_blank">
-github.com/amishapatel20</a></p>
+<p>GitHub:
+<a href="https://github.com/amishapatel20" target="_blank">
+github.com/amishapatel20
+</a>
+</p>
 </section>
 
 <footer>
@@ -302,7 +299,6 @@ entry.target.classList.add("show");
 }
 });
 });
-
 document.querySelectorAll(".fade").forEach(el => observer.observe(el));
 </script>
 
